--- a/index.html
+++ b/index.html
@@ -42,6 +42,40 @@
         </div>
     </header>
 
+    <div class="menu">
+        <a href="">Home</a>
+        <a href="">About</a>
+        <ul>
+            <li><a href="">Overview</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Studio Infra</a></li>
+            <li><a href="">- Hanam</a></li>
+            <li><a href="">- Paju</a></li>
+        </ul>
+        <a href="">Works</a>
+        <a href="">News</a>
+        <a href="">Careers</a>
+        <ul>
+            <li><a href="">Overview</a></li>
+            <li><a href="">Hiring</a></li>
+            <li><a href="">Job Application</a></li>
+        </ul>
+        <a href="">Contact</a>
+        <div>
+            <p>
+                CONTACTS
+                <span>contact@vacorp.co.kr</span>
+                +82 02-547-8880
+            </p>
+            <p>
+                OFFICE
+                서울시 강남구 언주로 149길 17 (논현동)
+                <span>WANT TO WORK WITH ME?</span>         
+            </p>
+            <a href="">Get in Touch</a>
+        </div>
+    </div>
+
     <main>
         <!-- section1 -->
         <div class="section1 ">
@@ -51,13 +85,13 @@
                     <source src="./img/박감독님.mp4" type="video/mp4">
                 </video> -->
             </div>
-            <a href="" class="s1-c1">
+            <!-- <a href="" class="s1-c1">
                 <div>
                     <h2>Interview I Park Chan-wook, 
                         Director</h2>
                     <p>Film / Drama</p>
                 </div>
-            </a>
+            </a> -->
             <!-- <div class="arrow">
                 <a href="">
                     <div class="triangle1"></div>
